# nostr_push_service

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PENDING_ENHANCEMENTS.md  README.md  compose.yml  dm_event.json  run_dev.sh  run_local.sh  serve_frontend.sh  settings.toml  setup_firebase.sh  test_config_load.rs  test_frontend.sh  test_frontend_firebase.sh
.github/workflows/: publish-and-release.yml
config/: settings.development.yaml  settings.yaml
deployment/: README.md  k8s-secrets-example.yaml
deployment/nostr-push/: Chart.yaml  values.yaml
deployment/nostr-push/templates/: certificate.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  sealed-secret.yaml  service.yaml
deployment/plur-push/: Chart.yaml  values.yaml
deployment/plur-push/templates/: certificate.yaml  configmap.yaml  deployment.yaml  ingress.yaml  pdb.yaml  sealed-secret.yaml  service.yaml
deployment/plur_push_service/: Chart.yaml  values.yaml
deployment/plur_push_service/templates/: certificate.yaml  config.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  pvc.yaml  sealed-secret.yaml  service.yaml
docs/: broadcast-feature.md  nip-xx-push-notifications.md
frontend/: README.md  SETUP_FIREBASE.md  firebase-config.js  firebase-messaging-sw.js  index.html  manifest.json  nostr.bundle.js
src/: cleanup_service.rs  config.rs  crypto.rs  error.rs  event_handler.rs  fcm_sender.rs  lib.rs  main.rs  models.rs  nostr_listener.rs  redis_store.rs  state.rs
src/handlers/: community.rs  mod.rs
src/nostr/: mod.rs  nip29.rs
src/redis/: mod.rs  subscriptions.rs
src/services/: mention_parser.rs  mod.rs
src/subscriptions/: manager.rs  mod.rs
tests/: broadcast_test.rs  dm_handling_test.rs  dm_test.rs  filter_matching_test.rs  filter_normalization_test.rs  integration_test.rs  nip29_coexistence_test.rs  nip44_crypto_test.rs  nip44_integration_test.rs  nip72_routing_test.rs  replay_horizon_test.rs  subscription_flow_test.rs  subscription_recovery_test.rs  subscription_sharing_test.rs  subscription_test.rs  subscription_timestamp_test.rs  test_token_reregistration.rs
tests/common/: mod.rs
tests/unit/: dm_handling_test.rs  filter_normalization_test.rs  mod.rs  nip29_coexistence_test.rs  nip72_routing_test.rs  subscription_sharing_test.rs
