[package]
name = "plur_push_service"
version = "0.1.0"
edition = "2021"

[features]
default = []
test-helpers = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# --- Web Framework & Async Runtime ---
axum = { version = "0.8", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Serialization & Deserialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Configuration & Environment ---
config = { version = "0.15", features = ["yaml"] }
dotenvy = "0.15"

# --- Error Handling ---
thiserror = "2.0"
anyhow = "1.0" # For general application errors, might replace with more specific errors later

# --- Database / Caching ---
# sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "uuid", "json" ] }
# uuid = { version = "1.4", features = ["v4", "serde"] }
redis = { version = "0.29.5", features = ["connection-manager", "tls-rustls", "tls-rustls-webpki-roots", "tokio-comp", "tokio-rustls-comp"] }
bb8-redis = { version = "0.21" }

# --- Nostr ---
nostr-sdk = { version = "0.40.0", features = ["all-nips"] }
hex = "0.4.3"
url = "2.5"

# --- Utilities ---
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
validator = { version = "0.20", features = ["derive"] }
async-trait = "0.1"

# --- Firebase Cloud Messaging (FCM) ---
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
firebase-messaging-rs = { git = "https://github.com/i10416/firebase-messaging-rs.git", branch = "main", features = ["fcm", "native-tls"] }
# Add tokio-util back but with a specific version pinned
tokio-util = "=0.6.10"

# Dev dependencies for integration tests
[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
futures = "0.3"
portpicker = "0.1"
tracing = "0.1"
once_cell = "1.19"
url = "2.5"
# Remove nostr-relay
# nostr-relay = { version = "0.4.7", package = "nostr-relay" }
# Add nostr-relay-builder back
nostr-relay-builder = { version = "0.40.0", package = "nostr-relay-builder" }
plur_push_service = { path = "." }
# testcontainers = "0.20.0" # Removed